k8s-deployment-lb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-uuid-generator
spec:
  replicas: 3
  selector:
    matchLabels:
      role: go-uuid-generator
  template:
    metadata:
      labels:
        role: go-uuid-generator
    spec:
      containers:
      - name: go-uuid-generator
        image: alefiengo/go-uuid-generator:j1
        imagePullPolicy: Always
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: go-uuid-generator
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    role: go-uuid-generator
